--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "firebase": "^10.12.4",
+    "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
