--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.6.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "emoji-picker-react": "^4.11.1",
     "firebase": "^10.12.4",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
