--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "firebase": "^10.12.4",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "quil": "^1.1.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-images-upload": "^1.2.8",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
